[workspace]

resolver = "2"

members = [
    "modules",
    "relayer",
    "relayer-cli",
    "relayer-rest",
    "telemetry",
    "proto",
    "tools/integration-test",
    "tools/test-framework",
]

exclude = [
    "ci/no-std-check",
    "proto-compiler"
]

[patch.crates-io]
# patched to a commit on the `eth-bridge-integration` branch of our fork
tendermint              = {git = "https://github.com/heliaxdev/tendermint-rs", rev = "5b19be43bcab6bdb613e877bc768524a92c32699"}
tendermint-rpc          = {git = "https://github.com/heliaxdev/tendermint-rs", rev = "5b19be43bcab6bdb613e877bc768524a92c32699"}
tendermint-proto        = {git = "https://github.com/heliaxdev/tendermint-rs", rev = "5b19be43bcab6bdb613e877bc768524a92c32699"}
tendermint-light-client = {git = "https://github.com/heliaxdev/tendermint-rs", rev = "5b19be43bcab6bdb613e877bc768524a92c32699"}
tendermint-light-client-verifier = {git = "https://github.com/heliaxdev/tendermint-rs", rev = "5b19be43bcab6bdb613e877bc768524a92c32699"}
tendermint-testgen      = {git = "https://github.com/heliaxdev/tendermint-rs", rev = "5b19be43bcab6bdb613e877bc768524a92c32699"}
