[workspace]

resolver = "2"

members = [
    "modules",
    "relayer",
    "relayer-cli",
    "relayer-rest",
    "telemetry",
    "proto",
    "tools/integration-test",
    "tools/test-framework",
]

exclude = [
    "ci/no-std-check",
    "proto-compiler"
]

[patch.crates-io]
# patched to a commit on the `eth-bridge-integration` branch of our fork
tendermint              = {git = "https://github.com/heliaxdev/tendermint-rs", rev = "b7e5a75b0d5cc92f90958790716fc061de6305da"}
tendermint-rpc          = {git = "https://github.com/heliaxdev/tendermint-rs", rev = "b7e5a75b0d5cc92f90958790716fc061de6305da"}
tendermint-proto        = {git = "https://github.com/heliaxdev/tendermint-rs", rev = "b7e5a75b0d5cc92f90958790716fc061de6305da"}
tendermint-light-client = {git = "https://github.com/heliaxdev/tendermint-rs", rev = "b7e5a75b0d5cc92f90958790716fc061de6305da"}
tendermint-light-client-verifier = {git = "https://github.com/heliaxdev/tendermint-rs", rev = "b7e5a75b0d5cc92f90958790716fc061de6305da"}
tendermint-testgen      = {git = "https://github.com/heliaxdev/tendermint-rs", rev = "b7e5a75b0d5cc92f90958790716fc061de6305da"}
