[workspace]

resolver = "2"

members = [
    "modules",
    "relayer",
    "relayer-cli",
    "relayer-rest",
    "telemetry",
    "proto",
    "tools/integration-test",
    "tools/test-framework",
]

exclude = [
    "ci/no-std-check",
    "proto-compiler"
]

[patch.crates-io]
# patched to a commit on the `eth-bridge-integration` branch of our fork
tendermint              = {git = "https://github.com/heliaxdev/tendermint-rs", rev = "c364f4d0c3bb6f357ea48549e7a5b1cb49dbc2b4"}
tendermint-rpc          = {git = "https://github.com/heliaxdev/tendermint-rs", rev = "c364f4d0c3bb6f357ea48549e7a5b1cb49dbc2b4"}
tendermint-proto        = {git = "https://github.com/heliaxdev/tendermint-rs", rev = "c364f4d0c3bb6f357ea48549e7a5b1cb49dbc2b4"}
tendermint-light-client = {git = "https://github.com/heliaxdev/tendermint-rs", rev = "c364f4d0c3bb6f357ea48549e7a5b1cb49dbc2b4"}
tendermint-light-client-verifier = {git = "https://github.com/heliaxdev/tendermint-rs", rev = "c364f4d0c3bb6f357ea48549e7a5b1cb49dbc2b4"}
tendermint-testgen      = {git = "https://github.com/heliaxdev/tendermint-rs", rev = "c364f4d0c3bb6f357ea48549e7a5b1cb49dbc2b4"}
