[package]
name         = "ibc-relayer-rest"
version      = "0.14.0"
authors      = ["Informal Systems <hello@informal.systems>"]
edition      = "2021"
license      = "Apache-2.0"
readme       = "README.md"
keywords     = ["ibc", "rest", "api", "cosmos", "tendermint"]
homepage     = "https://hermes.informal.systems/"
repository   = "https://github.com/informalsystems/ibc-rs"
rust-version = "1.60"
description  = """
  Rust implementation of a RESTful API server for Hermes
"""

[dependencies]
ibc         = { git = "https://github.com/heliaxdev/ibc-rs", branch = "yuji/v0.14.0_tm_v0.23.5" }
ibc-relayer = { version = "0.14.0", path = "../relayer" }

crossbeam-channel = "0.5"
rouille           = "3.5"
serde             = "1.0"
tracing           = "0.1"

[dev-dependencies]
serde_json = "1.0.79"
toml       = "0.5.9"
ureq       = "2.4.0"
