[package]
name         = "ibc-relayer"
version      = "0.14.0"
edition      = "2021"
license      = "Apache-2.0"
readme       = "README.md"
keywords     = ["blockchain", "consensus", "cosmos", "ibc", "tendermint"]
repository   = "https://github.com/informalsystems/ibc-rs"
authors      = ["Informal Systems <hello@informal.systems>"]
rust-version = "1.60"
description  = """
    Implementation of an IBC Relayer in Rust, as a library
"""

[package.metadata.docs.rs]
all-features = true

[features]
default   = ["flex-error/std", "flex-error/eyre_tracer"]
profiling = []
telemetry = ["ibc-telemetry"]

[dependencies]
ibc           = { version = "0.14.0", path = "../modules" }
ibc-proto     = { version = "0.17.1", path = "../proto" }
ibc-telemetry = { version = "0.14.0", path = "../telemetry", optional = true }
# need to use the same ibc as Anoma
ibc-abciplus           = { package = "ibc", git = "https://github.com/heliaxdev/ibc-rs", branch = "yuji/v0.14.0_abciplus" }
ibc-proto-abciplus     = { package = "ibc-proto", git = "https://github.com/heliaxdev/ibc-rs", branch = "yuji/v0.14.0_abciplus" }

namada_apps = { git = "https://github.com/anoma/namada", branch = "yuji/ibc_e2e_test_tm37" }
namada = { git = "https://github.com/anoma/namada", branch = "yuji/ibc_e2e_test_tm37", default-features = false, features = ["ibc-mocks"] }

subtle-encoding = "0.5"
humantime-serde = "1.1.1"
serde = "1.0"
serde_derive = "1.0"
thiserror = "1.0.30"
toml = "0.5"
tracing = "0.1.34"
tokio = { version = "1.0", features = ["rt-multi-thread", "time", "sync"] }
serde_json = { version = "1" }
bytes = "1.1.0"
prost = { version = "0.9" }
prost-types = { version = "0.9" }
futures = "0.3.21"
crossbeam-channel = "0.5.4"
k256 = { version = "0.10.4", features = ["ecdsa-core", "ecdsa", "sha256"]}
hex = "0.4"
bitcoin = { version = "=0.27", features = ["use-serde"] }
tiny-bip39 = "0.8.0"
hdpath = { version = "0.6.0" }
sha2 = "0.10.2"
tiny-keccak = { version = "2.0.2", features = ["keccak"], default-features = false }
ripemd160 = "0.9.1"
bech32 = "0.8.1"
itertools = "0.10.3"
tonic = { version = "0.6", features = ["tls", "tls-roots"] }
dirs-next = "2.0.0"
retry = { version = "1.3.1", default-features = false }
async-stream = "0.3.3"
http = "0.2.6"
flex-error = { version = "0.4.4", default-features = false }
signature = "1.4.0"
anyhow = "1.0"
semver = "1.0"
uint = "0.9"
humantime = "2.1.0"
nanoid = "0.4.0"
regex = "1.5.5"
moka = "0.8.2"
borsh = "0.9.3"
# for Namada
tendermint-rpc-abciplus = { package = "tendermint-rpc", git = "https://github.com/heliaxdev/tendermint-rs", branch = "yuji/abciplus_rpc_params", features = ["http-client", "websocket-client"] }
tendermint-light-client-abciplus = { package = "tendermint-light-client", git = "https://github.com/heliaxdev/tendermint-rs", branch = "yuji/abciplus_rpc_params", features = ["rpc-client", "secp256k1", "unstable"] }
tendermint-light-client-verifier-abciplus = { package = "tendermint-light-client-verifier", git = "https://github.com/heliaxdev/tendermint-rs", branch = "yuji/abciplus_rpc_params" }
tendermint-proto-abciplus = { package = "tendermint-proto", git = "https://github.com/heliaxdev/tendermint-rs", branch = "yuji/abciplus_rpc_params" }
ics23 = "0.7.0"

[dependencies.num-bigint]
version = "0.4"
features = ["serde"]

[dependencies.num-rational]
version = "0.4.0"
features = ["num-bigint", "serde"]

[dependencies.tendermint]
version = "=0.23.6"
features = ["secp256k1"]

[dependencies.tendermint-rpc]
version = "=0.23.6"
features = ["http-client", "websocket-client"]

[dependencies.tendermint-light-client]
version = "=0.23.6"
default-features = false
features = ["rpc-client", "secp256k1", "unstable"]

[dependencies.tendermint-light-client-verifier]
version = "=0.23.6"
default-features = false

[dependencies.tendermint-proto]
version = "=0.23.6"

[dev-dependencies]
# need to use the same tendermint-rs version
ibc = { version = "0.14.0", path = "../modules", features = ["mocks"] }
ibc-abciplus = { package = "ibc", git = "https://github.com/heliaxdev/ibc-rs", branch = "yuji/v0.14.0_abciplus", features = ["mocks"] }
serial_test = "0.6.0"
env_logger = "0.9.0"
tracing-subscriber = { version = "0.3.11", features = ["fmt", "env-filter", "json"] }
test-log = { version = "0.2.10", features = ["trace"] }

# Needed for generating (synthetic) light blocks.
tendermint-testgen = { version = "=0.23.6" }
tendermint-testgen-abciplus = { package = "tendermint-testgen", git = "https://github.com/heliaxdev/tendermint-rs", branch = "yuji/abciplus_rpc_params" }
