[package]
name = "no-std-check"
version = "0.1.0"
edition = "2021"
resolver = "2"

[dependencies]
ibc = { path = "../../modules", default-features = false }
ibc-proto = { path = "../../proto", default-features = false }
tendermint = {git = "https://github.com/heliaxdev/tendermint-rs", rev = "9694eaa42799eec2af2af06a15c7cd779f48fb9c", default-features = false }
tendermint-proto = {git = "https://github.com/heliaxdev/tendermint-rs", rev = "9694eaa42799eec2af2af06a15c7cd779f48fb9c", default-features = false }
tendermint-light-client-verifier = {git = "https://github.com/heliaxdev/tendermint-rs", rev = "9694eaa42799eec2af2af06a15c7cd779f48fb9c", default-features = false }

sp-core = { version = "5.0.0", default-features = false, optional = true }
sp-io = { version = "5.0.0", default-features = false, optional = true }
sp-runtime = { version = "5.0.0", default-features = false, optional = true }
sp-std = { version = "4.0.0", default-features = false, optional = true }

[features]
panic-handler = []
use-substrate = [
  "sp-core",
  "sp-io",
  "sp-runtime",
  "sp-std",
]
substrate-std = [
  "sp-core/std",
  "sp-io/std",
  "sp-runtime/std",
  "sp-std/std",
]
