[package]
name       = "ibc-integration-test"
version    = "0.14.0"
edition    = "2021"
license    = "Apache-2.0"
readme     = "README.md"
keywords   = ["blockchain", "consensus", "cosmos", "ibc", "tendermint"]
homepage   = "https://hermes.informal.systems/"
repository = "https://github.com/informalsystems/ibc-rs"
authors    = ["Informal Systems <hello@informal.systems>"]

description = """
  Integration tests for IBC Relayer
"""

[dependencies]
ibc                = { git = "https://github.com/heliaxdev/ibc-rs", branch = "yuji/v0.14.0_tm_v0.23.5" }
ibc-relayer        = { path = "../../relayer" }
ibc-relayer-cli    = { path = "../../relayer-cli" }
ibc-proto          = { git = "https://github.com/heliaxdev/ibc-rs", branch = "yuji/v0.14.0_tm_v0.23.5" }
ibc-test-framework = { path = "../test-framework" }
tendermint         = { git = "https://github.com/heliaxdev/tendermint-rs", branch = "yuji/rebase_v0.23.5" }
tendermint-rpc     = { git = "https://github.com/heliaxdev/tendermint-rs", branch = "yuji/rebase_v0.23.5", features = ["http-client", "websocket-client"] }

serde_json = "1"
time = "0.3"
serde = "1.0.136"

[features]
default = []
example = []
manual = []
ordered = []
ica = []
experimental = []

[[bin]]
name = "test_setup_with_binary_channel"
doc = true
